# agent-rag-demo

./: .env.example  .gitignore  ARCHITECTURE.md  CLOUD_SETUP.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  test_azure.py
app/: __init__.py  app.py  app_no_llm.py  app_with_vector.py  demo_swappable_retrievers.py  test_google_search.py
app/adapters/: llama_index_tools.py
app/infrastructure/: retriever.py  tools.py
tests/: conftest.py  test_integration.py  test_main_components.py  test_main_system.py  test_retriever.py  test_tools.py
